# fed-learning

./: README.md  centralized_ml.py  comparison.py  federated_ml.py  pipeline_script.sh  pyproject.toml  run.py  run.sh
fed-learning/: README.md
fed_learning/: __init__.py  aggregation_strategies.py  client_app.py  fed_random_forest.py  rf_client_app.py  rf_server_app.py  server_app.py  task.py
results/: centralized_results.csv  comparison_results.csv  results.csv
