[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fed-learning"
version = "1.0.0"
description = "Federated Logistic Regression with Iris and Adult datasets"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.19.0",
    "scikit-learn>=1.3.0",          
    "pandas>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fed_learning"]

[tool.flwr.app]
publisher = "lenaschill"

[tool.flwr.app.components]
serverapp = "fed_learning.server_app:app"
clientapp = "fed_learning.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
penalty = "l2"
local-epochs = 5
dataset = "iris"  # or "adult" (switch in CLI or here)

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
