[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fed-learning"
version = "1.0.0"
description = "Federated Learning with Logistic Regression and Random Forest"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.19.0",
    "scikit-learn>=1.3.0",          
    "pandas>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fed_learning"]

[tool.flwr.app]
publisher = "lenaschill"

[tool.flwr.app.components]
serverapp = "fed_learning.server_app:app"  # Default to logistic regression
clientapp = "fed_learning.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
penalty = "l2"
local-epochs = 5
dataset = "iris"  # or "adult"
model-type = "logistic_regression"  # or "random_forest"

# Random Forest specific configs
n-estimators = 10
max-depth = 5

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10